fix: add vertical scrolling in pop menu if content overflow :lipstick:

--- a/src/styles/navigation_section.css
+++ b/src/styles/navigation_section.css
@@ -55,6 +55,8 @@
   right: 0;
   box-sizing: border-box;
   min-width: 100%;
+  max-height: calc(100vh - 4rem);
+  overflow: scroll;
   background-color: #fff;
   border-radius: 8px;
   border: solid 1px rgba(50, 54, 63, 0.12);
